add /session endpoint for faster acquisition of instance info and account data if authenticated
